reorganise and update worker2

--- a/WQ_API_TOOL/worker2.ipynb
+++ b/WQ_API_TOOL/worker2.ipynb
@@ -20,10 +20,10 @@
     "# 所有参数\n",
     "\n",
     "# 从平台抓取的alpha数量(上限1000)\n",
-    "n_alpha = 200\n",
+    "n_alpha = 500\n",
     "\n",
     "#文件夹位置\n",
-    "dir_path = './refine_data'\n",
+    "dir_path = './data'\n",
     "\n",
     "# 数据文件位置(重点!!!,因为可能操作remain数据,请以1.csv结尾,结果结尾为3.csv,OS/IS结果结尾为4.csv)\n",
     "from_path = f'{dir_path}/0_data_1.csv'\n",
@@ -96,10 +96,10 @@
     "            priority_alpha_df.loc[index, 'submmitable'] = submittable(alpha)\n",
     "            priority_alpha_df.loc[index, 'sharpe'] = alpha['is']['sharpe']\n",
     "            priority_alpha_df.loc[index, 'fitness'] = alpha['is']['fitness']\n",
+    "            priority_alpha_df.loc[index, 'id'] = alpha['id']\n",
     "            if(alpha['is']['sharpe'] > 1.2):\n",
     "                if(submittable(alpha)):\n",
     "                    print(alpha['id'])\n",
-    "                    priority_alpha_df.loc[index, 'id'] = alpha['id']\n",
     "                    alpha_list.append(alpha['id'])\n",
     "            break\n",
     "\n",
