--- a/WQ_API_TOOL/worker1.ipynb
+++ b/WQ_API_TOOL/worker1.ipynb
@@ -18,17 +18,19 @@
    "outputs": [],
    "source": [
     "# 所有参数\n",
+    "dir_path = './727'\n",
+    "\n",
     "# 数据文件,通常改这里\n",
     "index = 0\n",
     "\n",
     "# multi-simulation单次测试数\n",
-    "sublist_size = 10\n",
+    "sublist_size = 9\n",
     "\n",
     "# 最大同时multi-simulation数(由于暂停时间不足，仍可能出现线程占满)\n",
-    "t_max = 9\n",
+    "t_max = 10\n",
     "\n",
     "# multi-simulation数占满时的休眠时间，较长的休眠时间有利于防止线程占满，但可能会导致同时测试线程过少\n",
-    "sleep_time = 400\n"
+    "sleep_time = 300\n"
    ]
   },
   {
@@ -38,8 +40,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
-    "dir_path = './data'\n",
     "\n",
     "if not os.path.exists(dir_path):\n",
     "    os.makedirs(dir_path)\n",
@@ -56,9 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "priority_alpha_df = pd.read_csv(from_path)\n",
-    "priority_alpha_df = priority_alpha_df.iloc[:, 1:]\n",
-    "priority_alpha_df['location'] = np.nan"
+    "priority_alpha_df = pd.read_csv(from_path)"
    ]
   },
   {
@@ -98,85 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "from time import sleep\n",
-    "\n",
-    "# 记录开始时间\n",
-    "start_time = time.time()\n",
-    "\n",
-    "t = 0\n",
-    "total_length = len(alpha_list_with_settings)\n",
-    "for i in range(0, total_length, sublist_size):\n",
-    "    sublist = alpha_list_with_settings[i:i + sublist_size]\n",
-    "    t = t + 1\n",
-    "    while True:\n",
-    "        try:\n",
-    "            if t >= t_max:\n",
-    "                print(f\"wait for {sleep_time}s\")\n",
-    "                sleep(sleep_time)\n",
-    "                t = 0\n",
-    "            \n",
-    "            # 计算运行时间\n",
-    "            elapsed_time = time.time() - start_time\n",
-    "\n",
-    "            # 如果运行时间超过4小时，重新登录\n",
-    "            if (elapsed_time > 4 * 3600):\n",
-    "                session = sign_in(username, password)\n",
-    "                start_time = time.time()  # 重置开始时间\n",
-    "                print(\"Session renewed successfully.\")\n",
-    "\n",
-    "            # 发送多重模拟请求\n",
-    "            response = session.post('https://api.worldquantbrain.com/simulations', json=sublist)\n",
-    "\n",
-    "            # 检查响应\n",
-    "            if len(response.headers[\"Location\"]) > 0:\n",
-    "                print(\"Alpha location get successfully.\")\n",
-    "                for alpha_data in sublist:\n",
-    "                    priority_alpha_df.loc[priority_alpha_df['regular'] == alpha_data['regular'], 'location'] = response.headers[\"Location\"]\n",
-    "                priority_alpha_df.to_csv(to_path)\n",
-    "                print(response.headers[\"Location\"])\n",
-    "                break\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            # 打印错误信息\n",
-    "            print(f\"Error in sending simulation request. Retrying after 5s. Error: {e}\")\n",
-    "            sleep(5)\n",
-    "\n",
-    "# 处理剩余的元素（如果有）\n",
-    "if total_length % sublist_size != 0:\n",
-    "    remaining_sublist = alpha_list_with_settings[-(total_length % sublist_size):]\n",
-    "    t = t + 1\n",
-    "    while True:\n",
-    "        try:\n",
-    "            if t >= t_max:\n",
-    "                print(f\"wait for {sleep_time} s\")\n",
-    "                sleep(sleep_time)\n",
-    "                t = 0\n",
-    "\n",
-    "            # 计算运行时间\n",
-    "            elapsed_time = time.time() - start_time\n",
-    "\n",
-    "            # 如果运行时间超过4小时，重新登录\n",
-    "            if (elapsed_time > 4 * 3600):\n",
-    "                session = sign_in(username, password)\n",
-    "                start_time = time.time()  # 重置开始时间\n",
-    "                print(\"Session renewed successfully.\")\n",
-    "\n",
-    "            # 发送多重模拟请求\n",
-    "            response = session.post('https://api.worldquantbrain.com/simulations', json=remaining_sublist)\n",
-    "            # 检查响应\n",
-    "            if len(response.headers[\"Location\"]) > 0:\n",
-    "                print(\"Alpha location get successfully.\")\n",
-    "                for alpha_data in remaining_sublist:\n",
-    "                    priority_alpha_df.loc[priority_alpha_df['regular'] == alpha_data['regular'], 'location'] = response.headers[\"Location\"]\n",
-    "                priority_alpha_df.to_csv(to_path)\n",
-    "                print(response.headers[\"Location\"])\n",
-    "                break\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            # 打印错误信息\n",
-    "            print(f\"Error in sending simulation request. Retrying after 5s. Error: {e}\")\n",
-    "            sleep(5)"
+    "simulate(session, alpha_list_with_settings, sublist_size, t_max, sleep_time)"
    ]
   }
  ],
