--- a/WQ_API_TOOL/worker2.ipynb
+++ b/WQ_API_TOOL/worker2.ipynb
@@ -19,17 +19,17 @@
    "source": [
     "# 所有参数\n",
     "\n",
-    "# 从平台抓取的alpha数量(上限1000)\n",
-    "n_alpha = 500\n",
+    "# 从平台抓取的alpha数量(上限可以大于1000)\n",
+    "n_alpha = 900\n",
     "\n",
     "#文件夹位置\n",
-    "dir_path = './data'\n",
+    "dir_path = './726'\n",
     "\n",
     "# 数据文件位置(重点!!!,因为可能操作remain数据,请以1.csv结尾,结果结尾为3.csv,OS/IS结果结尾为4.csv)\n",
     "from_path = f'{dir_path}/0_data_1.csv'\n",
     "\n",
     "# 回测未完成数据存储位置\n",
-    "remain_path = f'{dir_path}/0_remain_1.csv'"
+    "remain_path = f'{dir_path}/0_remain_2.csv'"
    ]
   },
   {
@@ -72,7 +72,6 @@
    "outputs": [],
    "source": [
     "priority_alpha_df = pd.read_csv(from_path)\n",
-    "priority_alpha_df = priority_alpha_df.iloc[:, 1:]\n",
     "priority_alpha_df['submmitable'] = np.nan\n",
     "priority_alpha_df['sharpe'] = np.nan\n",
     "priority_alpha_df['fitness'] = np.nan\n",
@@ -93,6 +92,7 @@
     "            alpha['settings']['universe'] == row['universe'] and \\\n",
     "            alpha['settings']['decay'] == row['decay'] and \\\n",
     "            alpha['settings']['neutralization'] == row['neutralization']:\n",
+    "                \n",
     "            priority_alpha_df.loc[index, 'submmitable'] = submittable(alpha)\n",
     "            priority_alpha_df.loc[index, 'sharpe'] = alpha['is']['sharpe']\n",
     "            priority_alpha_df.loc[index, 'fitness'] = alpha['is']['fitness']\n",
